--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -154,8 +154,8 @@
         <div class="large-4 columns">
           <h6>From The Lab</h6>
 
-          {% load flatpages %}
-          {% get_flatpages as flatpages %}
+          {% load gcl_utils %}
+          {% get_footer_flatpages as flatpages %}
           {% for page in flatpages %}
           <a class="notice" href="{% url 'django.contrib.flatpages.views.flatpage' page.url %}">{{ page.title }}</a>
           {% endfor %}
