--- a/global_change_lab/templates/partials/skills_grid.html
+++ b/global_change_lab/templates/partials/skills_grid.html
@@ -1,14 +1,11 @@
 {% load staticfiles %}
+{% load user_skills %}
 <ul class="skills-grid {{ extra_classes }}">
 {% for skill in skills %}
   <li class="skill">
     <a href="{{ skill.get_absolute_url }}">
     <div class="image-column">
-      {% if skill in request.user.skills_completed.all %}
-      <img src="{% static 'images/skill-flag-red.png' %}" alt="Skill image">
-      {% else %}
-      <img src="{% static 'images/skill-flag-gray.png' %}" alt="Skill image">
-      {% endif %}
+      <img src="{% skill_user_flag_image skill request.user %}" alt="Skill image">
     </div>
     <div class="name-column"><h3 class="skill-name">{{skill.name}}</h3></div>
 
