--- a/skills/templates/skills/partials/skill_list_small.html
+++ b/skills/templates/skills/partials/skill_list_small.html
@@ -1,15 +1,12 @@
 {% load staticfiles %}
+{% load user_skills %}
 
 <div class="skill-list-small">
 {% for skill in skills %}
   <a href="{{ skill.get_absolute_url }}">
   <div class="row">
     <div class="image-column">
-      {% if skill in request.user.skills_completed.all %}
-      <img src="{% static 'images/skill-flag-red.png' %}" alt="Skill image">
-      {% else %}
-      <img src="{% static 'images/skill-flag-gray.png' %}" alt="Skill image">
-      {% endif %}
+      <img src="{% skill_user_flag_image skill request.user %}" alt="Skill image">
     </div>
     <div class="name-column"><h3 class="skill-name">{{skill.name}}</h3></div>
   </div>
