[Design&Fix] Ensure that logged-in dropdown has light background

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1051,7 +1051,7 @@ $topbar-bg-color: $gcl-lightgray;
 //                   buttons.
 $topbar-dropdown-bg: $gcl-lightgray;
 $topbar-dropdown-link-color: $gcl-darkgray; // #fff;
-// $topbar-dropdown-link-bg: #333;
+$topbar-dropdown-link-bg: $gcl-lightgray;
 // $topbar-dropdown-link-weight: normal;
 // $topbar-dropdown-toggle-size: 5px;
 $topbar-dropdown-toggle-color: $gcl-red;
