Changing the Name to Username

--- a/global_change_lab/templates/account/signup.html
+++ b/global_change_lab/templates/account/signup.html
@@ -32,7 +32,7 @@
           {% endif %}
         </label>
         <label>
-          <div>Name</div>
+          <div>Username</div>
           <input type="text" name="username">
           {% if form.username.errors %}
             <small class="error">{{ form.username.errors.as_text }}</small>
