Changed the text on the admin dashboard, about user statistics.

--- a/global_change_lab/templates/admin_dashboard.html
+++ b/global_change_lab/templates/admin_dashboard.html
@@ -35,15 +35,15 @@
       <div class="large-6 columns">
         <h6>Number of users signing up during last week</h6>
         <div id="admin-datablock">
-          <p>Last week there were {{ num_users_last_week }} users signing up.</p>
+          <p>Within the last 7 days there were {{ num_users_last_week }} users signing up.</p>
         </div>
         <h6>Number of users signing up during last month</h6>
         <div id="admin-datablock">
-          <p>Last month there were {{ num_users_last_month }} users signing up.</p>
+          <p>Within the last 30 days there were {{ num_users_last_month }} users signing up.</p>
         </div>
         <h6>Number of users signing up during last year</h6>
         <div id="admin-datablock">
-          <p>Last year there were {{ num_users_last_year }} users signing up.</p>
+          <p>Within the last 365 days there were {{ num_users_last_year }} users signing up.</p>
         </div>
       </div>
     </div>
